Add basic code for waiting queue, query check log and push appcept check log
